# gst-complextransf

./: .gitignore  AUTHORS  ChangeLog  README  configure.ac
src/: Makefile.am  gstcmplxtrans.c  gstcmplxtrans.h  gstcomplextransf.c  test1.sh  test2.sh
